2010-04-25	Axel Steiner <ast@treibsand.com>
	* smf_settings.c (smf_settings_parse_config) fixed config parse error
	* smf_lookup_ldap.c (smf_lookup_ldap_query) added check for empty query string,
	  to catch exceptions.
	* smf_lookup_sql.c (smf_lookup_sql_query) added check for empty query string,
	  to catch exceptions.
	* smf_smtpd.c (load) changed smtp code 502 response message

2010-04-23	Axel Steiner <ast@treibsand.com>
	* smf_message.c (smf_message_extract_addresses) fixed initialization bug

2010-04-22	Axel Steiner <ast@treibsand.com>
	* smf_smtpd.c (handle_q_processing_error) fixed bug in return code handling.
	  If a plugin returned 2, the smtp message was displayed twice.
	* smf_smtpd.c (load_modules) added response message check

2010-04-21	Werner Detter <werner@aloah-from-hell.de>
	* smf_lookup_db4.c changed name of lookup-function 
	* smf_trace.c increased maxlen trace-messages

2010-04-15	Axel Steiner <ast@treibsand.com>
	* smf_modues.c (smf_modules_process) fixed wrong return code
	* smf_session.h added new field (response_msg) to SMFSession_T struct
	* smf_session.c (smf_session_get, smf_session_free) modified session
	  functions for new field.
	* smf_smtpd.c (handle_q_processing_error) using now new response_msg field
	  if not null.
	* smf_pipe.c (handle_q_processing_error) using now new response_msg field
	  if not null.

2010-04-14	Axel Steiner <ast@treibsand.com>
	* smf_smtp_codes.c (smf_smtp_codes_insert, smf_smtp_codes_get) changed
	  hashing function for smtp codes, refs #6
	* smf_modules.c (smf_modules_process) fix bug in plugin handling

2010-04-08	Axel Steiner <ast@treibsand.com>
	* main.c (main) set syslog facility to LOG_MAIL

2010-04-08	Axel Steiner <ast@treibsand.com>
	* smf_modules.c (smf_modules_process) state file was not removed, when
	plugin stops processing.

2010-04-08	Sebastian Jäkel <sj@space.net> / Axel Steiner <ast@treibsand.com>
	* fixed Bug #7, multiple free of filepointers